# pocketbook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: models.py  server.py
frontend/wxapp/: app.json  project.config.json
frontend/wxapp/pages/main/: main.js  main.wxml  main.wxss
src/: CMakeLists.txt  book.cc  book.h  book_client.cc  book_main.cc  book_service.cc  entity.cc  entity.h  message.proto  messages.proto  service.proto  test.proto  util.cc  util.h  util_test.cc
src/testdata/: book_config.tsv  checkpoint.tsv
